--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  --background-default-default: #ffffff;
+  --background-default-secondary: #f7f8f8;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  --border-default-default: #d9d9d9;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  --text-default-default: #1e1e1e;
+  --text-default-secondary: #757575;
+  --text-brand-default: #2c2c2c;
 }
