--- a/app/globals.css
+++ b/app/globals.css
@@ -11,4 +11,5 @@
   --text-default-default: #1e1e1e;
   --text-default-secondary: #757575;
   --text-brand-default: #2c2c2c;
+  --text-brand-onBrand: #f5f5f5;
 }
