--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,12 @@
   --text-brand-default: #2c2c2c;
   --text-brand-onBrand: #f5f5f5;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
