--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
   --text-default-secondary: #757575;
   --text-brand-default: #2c2c2c;
   --text-brand-onBrand: #f5f5f5;
+  --text-neutral-onNeutral: #f3f3f3;
 }
 
 *::-webkit-scrollbar {
