--- a/app/globals.css
+++ b/app/globals.css
@@ -7,12 +7,14 @@
   --background-default-secondary: #f7f8f8;
 
   --border-default-default: #d9d9d9;
+  --border-danger-secondary: #c00f0c;
 
   --text-default-default: #1e1e1e;
   --text-default-secondary: #757575;
   --text-brand-default: #2c2c2c;
   --text-brand-onBrand: #f5f5f5;
   --text-neutral-onNeutral: #f3f3f3;
+  --text-danger-secondary: #c00f0c;
 }
 
 *::-webkit-scrollbar {
