💄 Design: add vote section UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,13 @@
   --white-003: #f5f5f5;
   --white-004: #f7f8f8;
   --white-005: #d9d9d9;
+  --white-006: #ececec;
 
   --gray-001: #b3b3b3;
   --gray-002: #757575;
+  --gray-003: #727272;
+  --gray-004: #c3c3c3;
+  --gray-005: #f7f7f7;
 
   --black-001: #111111;
   --black-002: #1e1e1e;
