💄 Design: add today news page UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,10 +15,12 @@
   --gray-003: #727272;
   --gray-004: #c3c3c3;
   --gray-005: #f7f7f7;
+  --gray-006: #9da3ae;
 
   --black-001: #111111;
   --black-002: #1e1e1e;
   --black-003: #2c2c2c;
+  --black-004: #1d222b;
 
   --red-001: #c00f0c;
 
