--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,8 @@
   --gray-003: #727272;
   --gray-004: #c3c3c3;
   --gray-005: #f7f7f7;
+  --gray-006: #e3e3e3;
+  --gray-007: #898989;
 
   --black-001: #111111;
   --black-002: #1e1e1e;
