✨ Feature: add get today issue feature

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,8 @@
   --gray-006: #e3e3e3;
   --gray-007: #898989;
   --gray-008: #9da3ae;
+  --gray-009: #cccccc;
+  --gray-010: #727272;
 
   --black-001: #111111;
   --black-002: #1e1e1e;
