💄 Design: apply header relative css

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
   --gray-008: #9da3ae;
   --gray-009: #cccccc;
   --gray-010: #727272;
+  --gray-011: #666666;
 
   --black-001: #111111;
   --black-002: #1e1e1e;
